syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.demo.Client";
option java_outer_classname = "ClientProto";
option objc_class_prefix = "Client";

package register;
// The greeting service definition.
service LoginGreeter {
    // Sends a greeting
    rpc Login (LoginRequest) returns (LoginReply) {}
}

// The request message containing the user's name.
message LoginRequest {
    string username=1;
    string password=2;
}

// The response message containing the greetings
message LoginReply {
    User user=1;
    string message = 2;
    bool login=3;
}

service Greeter {
    // Sends a greeting
    rpc Register (RegisterRequest) returns (RegisterReply) {}
}

// The request message containing the user's name.
message RegisterRequest {
    string username=1;
    string password=2;
    string tel=3;
}

// The response message containing the greetings
message RegisterReply {
    User user=1;
    string message = 2;
    bool resgister=3;
}

service SearchFriendGreeter{
    rpc SearchFriend (SearchFriendRequest) returns (SearchFriendReply) {}
}

message SearchFriendRequest {
    string username=1;
}

message SearchFriendReply {
    User user=1;
}


message User{
    int32 id=1;
    string username=2;
    string password=3;
    string tel=4;
}